Calendar alignment fix, responsive table test

--- a/src/app/control-panel/configuration/fields/field-list.component.scss
+++ b/src/app/control-panel/configuration/fields/field-list.component.scss
@@ -1,4 +1,5 @@
 .mat-column-ActionButtons {
     flex: none;
     width: 48px;
+    padding: 0;
 }
